add_subdirectory(AP_Common)
add_subdirectory(AP_GPS)
add_subdirectory(AP_DCM)
add_subdirectory(AP_Compass)
add_subdirectory(AP_ADC)
add_subdirectory(AP_IMU)
add_subdirectory(AP_RangeFinder)

add_subdirectory(APM_RC)
add_subdirectory(APM_BMP085)

add_subdirectory(APO)
add_subdirectory(FastSerial)
add_subdirectory(ModeFilter)
add_subdirectory(GCS_MAVLink)

#add_subdirectory(playgroundlib)
